flex-wrapped search characters- MVP - needs styling repairs for aesthetics

--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,6 @@ main {
 .grid-view div.card.ui {
   margin: 1.25rem;
 }
-/*
-.main-img {
-  display: block;
-  border-radius: 100%;
-  margin: 0 auto;
-} */
 
 .main-img {
   border-radius: 100px;
@@ -40,10 +34,6 @@ main {
   width: 100%;
   opacity: 1;
 }
-
-/* header h1 {
-  text-align: center;
-} */
 
 .navLinks {
   padding: 1%;
@@ -67,10 +57,6 @@ input {
   padding: 0.5%;
 }
 
-/* .search-form {
-  
-} */
-
 .search-img-card {
   margin: 0 auto;
   margin-bottom: 1%;
@@ -81,16 +67,17 @@ input {
  
 }
 
-.img-card {
-  margin: 2% auto;
-  border: 1px solid black;
-  border-radius: 10px;
-  background: black;
-  padding: 0.5%;
-  
+.character-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1%;
 }
 
-.character-list {
+.search-form {
+  padding: 1%;
+}
+
+.search-form ul {
   display: flex;
   flex-wrap: wrap;
   margin: 1%;
